# quark-im

./: Cargo.toml  LICENSE  README.md
certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  client-cert.pem  client-key.pem  client.csr  generate_certs.sh  server-cert.pem  server-key.pem  server.csr
docs/: im.md
src/: abstracts.rs  app_error.rs  framed_stream.rs  io_stream.rs  join_task.rs  lib.rs  message_pack.rs  negotiator.rs  quark.rs  quark_im.rs  routing.rs  serde_framed.rs  service.rs  starting.rs
src/quic/: creator.rs  mod.rs
src/services/: mod.rs  referral.rs  referral_service.rs  relay.rs  speed_report.rs  speed_test.rs  speed_test_service.rs
src/tasks/: mod.rs  routing_query.rs
